--- a/girusantal_hf7/css/style.css
+++ b/girusantal_hf7/css/style.css
@@ -14,12 +14,11 @@
 
 .flex-container {
     display: flex;
-    background-color: green;
+    background-color: #f4f7f1;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
     overflow: hidden;
-    background-image: url(../img/main.jpg);
 }
 
 .circuits {
@@ -30,14 +29,36 @@
     width: calc(20% - 20px);
     overflow: hidden;
     padding: 30px;
-    margin: 10px;
-    background-color: rgb(108, 236, 39);
+    margin: 30px;
+    background-color: #86bdf4;
     justify-content: space-between;
+    transition: box-shadow 0.3s ease;
+}
+
+.circuits:hover {
+    box-shadow: 10px 15px 8px rgba(0, 0, 0, 0.2);
+    background-color: #297fd5
 }
 
 .circuits img {
     max-width: 100%;
-    height: auto;
+    height: 50%;
+    padding: 30px
+}
+
+.circuit {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+section.circuit>section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
 }
 
 nav {
@@ -53,13 +74,20 @@ nav {
 ul {
     list-style-type: none;
     color: white;
+    /* margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center; */
 }
 
 ul li {
     float: left;
-    width: 25%;
+    width: 22%;
     height: 100%;
 }
+
+
 
 ul li a {
     display: block;
@@ -71,33 +99,109 @@ ul li a {
     padding: 20px;
 }
 
+ul li.logo {
+    width: 12%;
+}
+
+ul li.logo a {
+    padding: 0;
+}
+
+ul li.logo img {
+    height: 56px;
+    width: auto;
+}
+
 ul li a:hover {
     background-color: #f4f7f1;
+}
+
+@media screen and (max-width:768px) {
+    ul li {
+        float: none;
+        width: 100%;
+    }
+    ul li.logo {
+        width:100%;
+    }
 }
 
 main {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+}
 
+@media screen and (max-width:768px) {
+    main {
+        display: block;
+    }
 }
 
 sidebar {
-    grid-column: 1/5;
+    grid-column: 1/4;
     grid-row: 1/4;
     border: 1px solid black;
     padding: 10px;
     margin: 10px;
-}
-
-sidebar span{
     text-align: center;
 }
 
+.first-question {
+    border: 2px solid black;
+    width: 90%;
+    margin: auto;
+}
 
+span {
+    font-size: larger;
+    font-weight: 300;
+}
 
+label {
+    margin-left: 20px;
+}
+
+input {
+    margin-right: 20px;
+}
+
+.circuit-1 {
+    padding-top: 15px;
+}
+
+.circuit-24 {
+    padding-bottom: 15px;
+}
+
+button {
+    background-color: #d10000;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: none;
+    padding: 12px 24px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+
+button:hover {
+    background-color: #b30000;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px);
+}
+
+button:active {
+    background-color: #990000;
+    transform: translateY(0);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
 .section-1 {
-    grid-column: 5/13;
+    grid-column: 4/13;
     grid-row: 1/2;
     border: 1px solid black;
     padding: 10px;
@@ -105,7 +209,7 @@ sidebar span{
 }
 
 .section-2 {
-    grid-column: 5/13;
+    grid-column: 4/13;
     grid-row: 2/3;
     border: 1px solid black;
     padding: 10px;
@@ -113,7 +217,7 @@ sidebar span{
 }
 
 .section-3 {
-    grid-column: 5/13;
+    grid-column: 4/13;
     grid-row: 3/4;
     border: 1px solid black;
     padding: 10px;
@@ -126,17 +230,15 @@ h4 {
     padding: 10px;
 }
 
-
-
 .f1-list {
     padding: 0;
     margin: 0;
 }
 
 .f1-list li {
-    float: none; /* Eltávolítjuk a float-ot */
-    margin-bottom: 10px; /* Kicsit távolság az elemek között */
-    color: #E10600; /* A szín beállítása */
+    float: none;
+    margin-bottom: 10px;
+    color: #E10600;
     text-align: center;
     width: 100%;
     padding: 5px;
@@ -155,14 +257,19 @@ section.content::after {
     display: table;
 }
 
-
 section.card {
     float: left;
     width: 23%;
     margin: 1%;
-    /*padding: 1%;*/
     background-color: #86bdf4;
     text-align: center;
+}
+
+@media screen and (max-width:768px) {
+    section.card {
+        float: none;
+        width:100%;
+    }
 }
 
 #colored-table {
@@ -171,7 +278,7 @@ section.card {
 
 
 table#colored-table td.practice {
-    background-color: rgb(239, 64, 64);
+    background-color: #f8c7c5;
 }
 
 table#colored-table td.time {
@@ -179,7 +286,7 @@ table#colored-table td.time {
 }
 
 table#colored-table td.race {
-    background-color: #f8c7c5;
+    background-color: rgb(239, 64, 64);
 }
 
 h3 {
@@ -218,4 +325,163 @@ td:hover {
     background: greenyellow;
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
+}
+
+/*teams*/
+
+.team-page {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+@media screen and (max-width:768px) {
+    .team-page {
+        display: block;
+      }
+}
+
+.team-1 {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    border: 5px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-2 {
+    grid-column: 7/13;
+    grid-row: 1/2;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    background-color: #297fd5;
+}
+
+.team-3 {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-4 {
+    grid-column: 7/13;
+    grid-row: 2/3;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-5 {
+    grid-column: 1/7;
+    grid-row: 3/4;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-6 {
+    grid-column: 7/13;
+    grid-row: 3/4;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-7 {
+    grid-column: 1/7;
+    grid-row: 4/5;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-8 {
+    grid-column: 7/13;
+    grid-row: 4/5;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-9 {
+    grid-column: 1/7;
+    grid-row: 5/6;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-10 {
+    grid-column: 7/13;
+    grid-row: 5/6;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.team-name {
+    grid-column: 4/10;
+    grid-row: 1/2;
+}
+
+.team-logo {
+    grid-column: 4/10;
+    grid-row: 2/3;
+    max-width: 100%;
+}
+
+.driver-1 {
+    grid-column: 1/5;
+    grid-row: 3/4;
+    max-width: 100%;
+}
+
+.driver-2 {
+    grid-column: 9/13;
+    grid-row: 3/4;
+    max-width: 100%;
+}
+
+.driver-1-name {
+    grid-column: 1/5;
+    grid-row: 4/5;
+    max-width: 100%;
+}
+
+.driver-2-name {
+    grid-column: 9/13;
+    grid-row: 4/5;
+    max-width: 100%;
 }
