--- a/girusantal_hf7/css/style.css
+++ b/girusantal_hf7/css/style.css
@@ -25,10 +25,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    flex: 0 1 auto;
-    width: calc(20% - 20px);
+    flex: 0 0 auto;
+    width: 15%;
     overflow: hidden;
-    padding: 30px;
+    padding: 10px;
     margin: 30px;
     background-color: #86bdf4;
     justify-content: space-between;
@@ -36,6 +36,10 @@
 }
 
 .circuits:hover {
+    width: 20%;
+    margin: 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
     box-shadow: 10px 15px 8px rgba(0, 0, 0, 0.2);
     background-color: #297fd5
 }
@@ -43,22 +47,22 @@
 .circuits img {
     max-width: 100%;
     height: 50%;
-    padding: 30px
+    padding: 5px
 }
 
 .circuit {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 
 section.circuit>section {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: middle;
     width: 100%;
-    height: fit-content;
+    /* height: fit-content; */
 }
 
 nav {
@@ -83,7 +87,7 @@ ul {
 
 ul li {
     float: left;
-    width: 22%;
+    width: 25%;
     height: 100%;
 }
 
@@ -97,18 +101,15 @@ ul li a {
     padding: 20px;
 }
 
-ul li.logo {
-    width: 12%;
+
+.footer-menu img{
+    height: 50px;
 }
 
-ul li.logo a {
-    padding: 0px;
-}
 
-ul li.logo img {
-    height: 56px;
-    /* width: auto; */
-}
+.footer-menu ul li{
+    width: 90%;
+    }
 
 ul li a:hover {
     background-color: #f4f7f1;
@@ -120,9 +121,9 @@ ul li a:hover {
         width: 100%;
     }
 
-    ul li.logo {
+    /* ul li.logo {
         width: 100%;
-    }
+    } */
 }
 
 main {
@@ -346,6 +347,51 @@ td {
     transform: rotate(360deg);
 }
 
+
+@keyframes rotateWave {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  td {
+    animation: rotateWave 2s;
+    /* Az animáció 5 másodpercig tart és végtelenségig ismétlődik */
+  }
+  
+  /* Az animáció késleltetése az egyes cellákra */
+  td:nth-child(1) {
+    animation-delay: 0s;
+  }
+  
+  td:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+  
+  td:nth-child(3) {
+    animation-delay: 0.4s;
+  }
+  
+  td:nth-child(4) {
+    animation-delay: 0.6s;
+  }
+  
+  td:nth-child(5) {
+    animation-delay: 0.8s;
+  }
+  
+  td:nth-child(6) {
+    animation-delay: 1.0s;
+  }
+  
+  td:nth-child(7) {
+    animation-delay: 1.2s;
+  }
+
 /* Tooltip alapértelmezett stílusa */
 .tooltip {
     visibility: hidden;
@@ -400,13 +446,13 @@ table.teams-2024 .team24 img {
 .team-1 {
     grid-column: 1/7;
     grid-row: 1/2;
-  border-radius: 20px;
+    border-radius: 20px;
     padding: 10px;
     margin: 10px;
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#65b2f5,#005BA9,#65b2f5);
+    background: linear-gradient(to left, #2e93eb, #005BA9, #2e93eb);
 }
 
 .team-2 {
@@ -418,7 +464,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#09dcc3,#00352f,#09dcc3);
+    background: linear-gradient(to left, #079282, #027265, #079282);
 }
 
 .team-3 {
@@ -430,8 +476,8 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#f86c7e,#a6051a,#f12b45);
-    }
+    background: linear-gradient(to left, #f86c7e, #a6051a, #f12b45);
+}
 
 .team-4 {
     grid-column: 7/13;
@@ -442,7 +488,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#dadcdd,#6c6e6f,#dadcdd);
+    background: linear-gradient(to left, #939798, #6c6e6f, #939798);
 }
 
 .team-5 {
@@ -454,7 +500,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#f1a8b1,#FF8000,#f1a8b1);
+    background: linear-gradient(to left, #f1a8b1, #FF8000, #f1a8b1);
 }
 
 .team-6 {
@@ -466,7 +512,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#57f2ed,#00a19c,#57f2ed);
+    background: linear-gradient(to left, #57f2ed, #00a19c, #57f2ed);
 }
 
 .team-7 {
@@ -478,7 +524,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#8698e9,#1b2b76,#8698e9);
+    background: linear-gradient(to left, #6d81da, #1b2b76, #6d81da);
 }
 
 .team-8 {
@@ -490,7 +536,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#79acf4,#3671C6,#79acf4);
+    background: linear-gradient(to left, #79acf4, #3671C6, #79acf4);
 }
 
 .team-9 {
@@ -502,7 +548,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#97f897,#52E252,#97f897);
+    background: linear-gradient(to left, #97f897, #52E252, #97f897);
 }
 
 .team-10 {
@@ -514,7 +560,7 @@ table.teams-2024 .team24 img {
     text-align: center;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    background: linear-gradient(to left,#89e8fd,#37BEDD,#89e8fd);
+    background: linear-gradient(to left, #89e8fd, #37BEDD, #89e8fd);
 }
 
 .team-name {
@@ -561,19 +607,25 @@ table.teams-2024 .team24 img {
 }
 
 /* Alap stílusok a különböző információs div-ekhez */
-.team-info, .driver1-info, .driver2-info {
+.team-info,
+.driver1-info,
+.driver2-info {
     /* background-color: rgba(0, 0, 0, 0.8); */
     color: white;
     padding: 10px;
     border-radius: 5px;
     font-size: 0.9rem;
-    opacity: 0;  /* Alapértelmezés szerint rejtett */
-    transition: opacity 0.3s ease;  /* Gördülékeny átmenet */
-    pointer-events: none;  /* Ne zavarja az egérkattintásokat */
+    opacity: 0;
+    /* Alapértelmezés szerint rejtett */
+    transition: opacity 0.3s ease;
+    /* Gördülékeny átmenet */
+    pointer-events: none;
+    /* Ne zavarja az egérkattintásokat */
 }
 
 /* A driver1 információ */
-.team-1 .team-2 .team-3 .team-4 .team-5 .team-6 .team-7 .team-8 .team-9 .team-10, .driver1-info {
+.team-1 .team-2 .team-3 .team-4 .team-5 .team-6 .team-7 .team-8 .team-9 .team-10,
+.driver1-info {
     grid-column: 5/9;
     grid-row: 3/4;
     text-align: center;
@@ -581,32 +633,36 @@ table.teams-2024 .team24 img {
 
 
 /* A driver2 információ */
-.team-1 .team-2 .team-3 .team-4 .team-5 .team-6 .team-7 .team-8 .team-9 .team-10, .driver2-info {
+.team-1 .team-2 .team-3 .team-4 .team-5 .team-6 .team-7 .team-8 .team-9 .team-10,
+.driver2-info {
     grid-column: 5/9;
     grid-row: 3/4;
     text-align: center;
 }
 
 /* A csapat információ */
-.team-1 .team-2 .team-3 .team-4 .team-5 .team-6 .team-7 .team-8 .team-9 .team-10, .team-info {
+.team-1 .team-2 .team-3 .team-4 .team-5 .team-6 .team-7 .team-8 .team-9 .team-10,
+.team-info {
     grid-column: 5/9;
     grid-row: 3/4;
     text-align: center;
 }
 
-.driver-1:hover ~ .driver1-info,
-.driver-2:hover ~ .driver2-info,
-.team-logo:hover ~ .team-info {
-    opacity: 1; 
+.driver-1:hover~.driver1-info,
+.driver-2:hover~.driver2-info,
+.team-logo:hover~.team-info {
+    opacity: 1;
 }
 
 /* Alapértelmezetten a div-ek elrejtése */
-.team-info, .driver1-info, .driver2-info {
+.team-info,
+.driver1-info,
+.driver2-info {
     display: none;
 }
 
-.driver-1:hover ~ .driver1-info,
-.driver-2:hover ~ .driver2-info,
-.team-logo:hover ~ .team-info {
-    display: block;  
+.driver-1:hover~.driver1-info,
+.driver-2:hover~.driver2-info,
+.team-logo:hover~.team-info {
+    display: block;
 }
