--- a/girusantal_vizsga/css/style.css
+++ b/girusantal_vizsga/css/style.css
@@ -29,7 +29,6 @@
 
 .circuits img {
     width: 100%;
-    /* height: auto; */
     display: block;
     padding: 20px;
     margin: 20px;
@@ -71,7 +70,7 @@
     display: block;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
     .flex-container {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         /* Kisebb képernyők esetén kisebb oszlopok */
@@ -115,19 +114,13 @@ ul li a {
     color: white;
 }
 
-/* 
-#f1-head {
-    position: relative;
-    overflow: hidden;
-} */
-
 .animated-image {
     position: absolute;
-    top: 0; /* Kezdő pozíció bal felső sarokban */
+    top: 0;
     left: 0;
-    width: 50px; /* A kerék mérete */
-    height: 50px; /* A kerék mérete */
-    animation: moveAndBounce 3s ease-in-out forwards; /* Végtelen animáció */
+    width: 50px;
+    height: 50px;
+    animation: moveAndBounce 4s ease-in-out forwards;
 }
 
 @keyframes moveAndBounce {
@@ -137,13 +130,11 @@ ul li a {
         transform: rotate(0deg);
     }
 
-    99% {
+    100% {
         left: 100%;
         top: 0px;
-        transform: rotate(360deg);
-           }
-    100%{
-       visibility: hidden;
+        transform: rotate(720deg);
+        visibility: hidden;
     }
 }
 
@@ -151,9 +142,13 @@ ul li:hover .animated-image {
     animation: moveAndBounce 3s ease-in-out forwards;
 }
 
-
 .footer-menu ul li.logo {
     width: 10%;
+}
+
+.footer-menu img {
+    width: 50px;
+    float: left;
 }
 
 .footer-menu ul li.logo a {
@@ -166,7 +161,7 @@ ul li:hover .animated-image {
 
 ul li a:hover {
     background-color: #f4f7f1;
-    color:#E10600;
+    color: #E10600;
 }
 
 @media screen and (max-width:768px) {
@@ -194,6 +189,10 @@ sidebar {
     padding: 10px;
     margin: 10px;
     text-align: center;
+}
+
+sidebar span {
+    font-weight: bolder;
 }
 
 .first-question {
@@ -255,16 +254,13 @@ input[type="checkbox"] {
     transition: background-color 0.3s, border-color 0.3s;
 }
 
-/* Ha be van pipálva (checked) */
 input[type="checkbox"]:checked {
     background-color: #ea6565;
     border-color: #d10000;
 }
 
-/* Checkbox belső jelölő négyzet, amikor pipálva van */
 input[type="checkbox"]:checked::before {
     content: '\2713';
-    /* √ szimbólum */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -420,7 +416,6 @@ body {
     margin: auto;
 }
 
-
 table#colored-table td.practice {
     background-color: #f8c7c5;
 }
@@ -447,7 +442,7 @@ section.card td {
     width: 11%;
 }
 
-td:hover {
+.card td:hover {
     font-weight: 900;
     color: aliceblue;
     font-size: medium;
